--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently -k -n \"Typescript, Node\" -p \"[{name}]\" -c \"blue,green \"  \"tsc --watch\" \"nodemon dist/index.js\" "
+    "test": "jest --verbose",
+    "test-watch": "jest --verbose --watchAll",
+    "dev": "concurrently -k -n \"Typescript, Node\" -p \"[{name}]\" -c \"blue,green \"  \"tsc --watch\" \"nodemon dist/index.js\" ",
+    "start": "tsc && node dist/index.js "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
     "concurrently": "^5.2.0",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.1.1",
     "typescript": "^3.9.6"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "warframe-items": "^1.973.0"
   }
 }
