--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
     "concurrently": "^5.2.0",
+    "dts-gen": "^0.6.0",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "ts-jest": "^26.1.1",
