--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "outDir": "dist",
-        "target":"ES6",
+        "target":"es6",
         "strict": true
     },
     "include" : [
